[package]
name = "x4balancer"
version = "0.1.0"
authors = ["mewosmith <48843615+mewosmith@users.noreply.github.com>"]
edition = "2018"
features = ["process_options"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.3.1"
simple_xml_serialize = "0.2.3"
simple_xml_serialize_macro = "0.2.1"
# yaserde = "0.3.7"
yaserde_derive = { version = "0.3.7" }
yaserde = { version = "0.3.7" }
xml-rs = "0.8.0"
log = "0.4"
simple_logger = "1.0"
regex = "1"
toml = "0.5.3"